# voice-paste

./: .env.sample  .gitignore  CLAUDE.md  PROJECT_SKILL.md  README.md  activate.bat  pyproject.toml  run.bat  run_tray.bat  voice-paste.bat  voice-paste.code-workspace
.claude/: settings.local.json
.claude/skills/: guide.md
docs/PR/: PR1.md  PR10.md  PR11.md  PR2.md  PR3.md  PR4.md  PR5.md  PR6.md  PR7.md  PR8.md  PR9.md
docs/issues/: multi_os_support.md  transcribing_ui.md
history/20260413/: 20260413163752_text.txt  20260413163758_text.txt  20260413163835_text.txt  20260413164150_text.txt  20260413164733_text.txt  20260413164737_text.txt  20260413164800_text.txt  20260413165656_text.txt  20260413165659_text.txt  20260413165703_text.txt  20260413165804_text.txt  20260413165821_text.txt  20260413165946_text.txt  20260413170014_text.txt  20260413170057_text.txt  20260413170133_text.txt  20260413170201_text.txt  20260413170211_text.txt  20260413170420_text.txt  20260413170503_text.txt  20260413171141_text.txt  20260413171526_text.txt  20260413172250_text.txt  20260413172815_text.txt  20260413172901_text.txt  20260413172942_text.txt
resources/: manual.txt  prompt.txt  yogo.csv
setup/: build_exe.bat  setup_venv.bat
tests/: conftest.py
tests/mocks/: mock_env.py  mock_externals.py
tests/transcription/: test_whisper_transcriber.py
voice_paste/: CLAUDE.md  __main__.py  config.py  constants.py  exceptions.py  gui.py  history.py  logger.py  main.py  settings_gui.py  tray.py  utils.py
voice_paste/audio/: recorder.py
voice_paste/input/: keyboard_sender.py
(+12 files in other folders)
